--- a/Object_Detection_Images.ipynb
+++ b/Object_Detection_Images.ipynb
@@ -263,7 +263,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Thanks for watching <3"
+    "Thanks for your time <3"
    ]
   }
  ],
